--- a/sample.html
+++ b/sample.html
@@ -21,7 +21,7 @@
   <title>Maddy</title><!--[if IE]><!-->
 	<!-- Link to an external CSS file -->
 	
-  <link href="source/style.css" rel="stylesheet" type="text/css" /><!--[endif]-->
+  <link href="style.css" rel="stylesheet" type="text/css" /><!--[endif]-->
 </head>
 
 <body>
@@ -38,7 +38,7 @@
       <div class="col-sm-9">
         <div class="inline">
           <div class="form">
-            <img src="source/brief.png" alt="image1" class="responsive" style=
+            <img src="brief.png" alt="image1" class="responsive" style=
             "max-width: 12%; line-height: 50px;" />
 
             <h5 class="white" style="font-size: 2vw;">HI, I'm Maddy!</h5>
@@ -57,7 +57,7 @@
     </div>
 
     <div class="row center">
-      <div class="col-sm-3"><img src="source/screen.png" class="img-fluid" alt="image2"
+      <div class="col-sm-3"><img src="screen.png" class="img-fluid" alt="image2"
       style=
       "border-radius: 4px; max-width: 100%; height: auto; padding-bottom: 30px;" /></div>
 
